<resources>

    <string name="app_name">WiDSync</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">WiDSync</string>
    <string name="btn_add_folder">Add folder</string>
    <string name="dlg_choosedir_title">Choose folder</string>
    <string name="folder_icon">Folder icon</string>
    <string name="folder_id_txt">Folder ID</string>
    <string name="folder_path_txt">Folder path</string>
    <string name="destination_folder">Destination</string>
    <string name="source_folder">Source</string>
    <string name="edit_ok">OK</string>
    <string name="delete_item">Delete</string>
    <string name="choose_folder">Browse</string>
    <string name="start_srv_txt">Find</string>
	<string name="label_me">This device</string>
    <string name="label_peers">Peers</string>
	<string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
	
</resources>